# global-keybind

./: Cargo.toml  README.md  flake.nix
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
flake-parts/: cargo.nix  home_modules.nix  shells.nix
