[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0.19", features = ["derive"] }
# serde = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
